[gd_scene load_steps=5 format=3 uid="uid://dc00ousclgdey"]

[ext_resource type="Texture2D" uid="uid://bnc4qabwqsxjh" path="res://Assets/Icons/Controls.png" id="1_50142"]
[ext_resource type="Script" uid="uid://bsv1uph4gl381" path="res://ui/pause_menu.gd" id="1_ejwgg"]
[ext_resource type="Theme" uid="uid://7qtjarwklgd2" path="res://ui/Themes/ui_theme.tres" id="2_fob5h"]

[sub_resource type="LabelSettings" id="LabelSettings_ejwgg"]
font_size = 40

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ejwgg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_fob5h")

[node name="ExpandRight" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExpandTop" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ExpandTop"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_ejwgg")

[node name="ButtonResume" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ButtonRestart" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="ButtonQuit" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ExpandMiddle" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_50142")
expand_mode = 1
stretch_mode = 4

[node name="ExpandBottom" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="ExpandLeft" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/ExpandLeft"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Game by: Andrej Lapin and Paulius Pilelis"

[connection signal="button_down" from="HBoxContainer/VBoxContainer/ButtonResume" to="." method="_on_button_resume_button_down"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonResume" to="." method="_on_button_resume_pressed"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/ButtonRestart" to="." method="_on_button_restart_button_down"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonRestart" to="." method="_on_button_restart_pressed"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_button_down"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
